# dataharvest

./: .env.example  Cargo.toml  README.md  docker-compose.yml
docker/: Dockerfile
migrations/: 001_init.sql
src/: config.rs  main.rs  models.rs  scraper.rs
src/routes/: jobs.rs
